--- a/src/app/system-main/system-main.component.html
+++ b/src/app/system-main/system-main.component.html
@@ -1,14 +1,9 @@
 <div class="contenedor">
   <div *ngIf="complete; else progress">
-    <mat-form-field appearance="standard" style="width: 95%; margin-left: 2%;" >
-      <mat-label>Buscar</mat-label>
-      <input matInput type="text" name="buscar" [(ngModel)]="buscar" (keyup)="aplicarFilter()">
-    </mat-form-field>
-
     <mat-tab-group mat-stretch-tabs mat-align-tabs="center">
 
       <mat-tab label="Platos"> 
-        <table mat-table [dataSource]="platos2" style="width: 100%;">
+        <table mat-table [dataSource]="platos" style="width: 100%;">
 
           <ng-container matColumnDef="agregar" >
             <th mat-header-cell *matHeaderCellDef> </th>
@@ -20,11 +15,10 @@
           </ng-container>
 
           <ng-container matColumnDef="Nombre" >
-            <th mat-header-cell *matHeaderCellDef>Nombre </th>
-            <td mat-cell *matCellDef="let element" style="width: 30%;">
-              <a [matTooltip]="element.precio | currency" matTooltipPosition="above" >
+            <th mat-header-cell *matHeaderCellDef> </th>
+            <td mat-cell *matCellDef="let element" [matTooltip]="element.precio | currency" matTooltipPosition="above" 
+            style="width: 30%;">
                 {{element.nombre}} 
-              </a>
          </td>
           </ng-container>
 
@@ -36,7 +30,7 @@
               </button>
 
               <input matInput [(ngModel)]="element.cantidad" disabled 
-              type="number" class="count" min="1" pattern="^[0-9]+">
+              type="number" class="count">
 
               <button  mat-mini-fab color="primary" (click)="sumar(i,element.tipo)">
                 <mat-icon>add</mat-icon>
@@ -45,14 +39,10 @@
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No hay datos encontrados: "{{buscar}}"</td>
-          </tr>
         </table>
       </mat-tab>
       <mat-tab label="Bebidas"> 
-        <table mat-table [dataSource]="bebidas2" style="width: 100%;">
+        <table mat-table [dataSource]="bebidas" style="width: 100%;">
 
           <ng-container matColumnDef="agregar">
             <th mat-header-cell *matHeaderCellDef> </th>
@@ -64,11 +54,10 @@
           </ng-container>
 
           <ng-container matColumnDef="Nombre">
-            <th mat-header-cell *matHeaderCellDef>Nombre </th>
-            <td mat-cell *matCellDef="let element " style="width: 30%;"> 
-              <a [matTooltip]="element.precio | currency" matTooltipPosition="above" >
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element " [matTooltip]="element.precio | currency" matTooltipPosition="above"
+            style="width: 30%;"> 
                 {{element.nombre}} 
-              </a>
          </td>
           </ng-container>
 
@@ -80,7 +69,7 @@
               </button>
 
               <input matInput [(ngModel)]="element.cantidad" 
-              disabled type="number" class="count" min="1" pattern="^[0-9]+">
+              disabled type="number" class="count">
 
               <button  mat-mini-fab color="primary" (click)="sumar(i,element.tipo)">
                 <mat-icon>add</mat-icon>
@@ -89,13 +78,10 @@
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No hay datos encontrados: "{{buscar}}"</td>
-          </tr>
         </table>
       </mat-tab>
       <mat-tab label="Combos">
-        <table mat-table [dataSource]="combos2" style="width: 100%;">
+        <table mat-table [dataSource]="combos" style="width: 100%;">
 
           <ng-container matColumnDef="agregar">
             <th mat-header-cell *matHeaderCellDef> </th>
@@ -107,11 +93,10 @@
           </ng-container>
 
           <ng-container matColumnDef="Nombre">
-            <th mat-header-cell *matHeaderCellDef>Nombre </th>
-            <td mat-cell *matCellDef="let element " style="width: 30%;"> 
-              <a [matTooltip]="element.precio | currency" matTooltipPosition="above" >
+            <th mat-header-cell *matHeaderCellDef> </th>
+            <td mat-cell *matCellDef="let element " [matTooltip]="element.precio | currency" matTooltipPosition="above"
+             style="width: 30%;"> 
                 {{element.nombre}} 
-              </a>
          </td>
           </ng-container>
 
@@ -123,7 +108,7 @@
               </button>
 
               <input matInput [(ngModel)]="element.cantidad" 
-              disabled type="number" class="count" min="1" pattern="^[0-9]+">
+              disabled type="number" class="count">
 
               <button  mat-mini-fab color="primary" (click)="sumar(i,element.tipo)">
                 <mat-icon>add</mat-icon>
@@ -132,13 +117,10 @@
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No hay datos encontrados: "{{buscar}}"</td>
-          </tr>
         </table>
       </mat-tab>
       <mat-tab label="Porciones">
-        <table mat-table [dataSource]="porciones2" style="width: 100%;">
+        <table mat-table [dataSource]="porciones" style="width: 100%;">
 
           <ng-container matColumnDef="agregar">
             <th mat-header-cell *matHeaderCellDef> </th>
@@ -150,11 +132,10 @@
           </ng-container>
 
           <ng-container matColumnDef="Nombre">
-            <th mat-header-cell *matHeaderCellDef>Nombre </th>
-            <td mat-cell *matCellDef="let element " style="width: 30%;"> 
-              <a [matTooltip]="element.precio | currency" matTooltipPosition="above" >
+            <th mat-header-cell *matHeaderCellDef> </th>
+            <td mat-cell *matCellDef="let element" [matTooltip]="element.precio | currency" matTooltipPosition="above" 
+             style="width: 30%;"> 
                 {{element.nombre}} 
-              </a>
          </td>
           </ng-container>
 
@@ -166,7 +147,7 @@
               </button>
 
               <input matInput [(ngModel)]="element.cantidad" 
-              disabled type="number" class="count" min="1" pattern="^[0-9]+">
+              disabled type="number" class="count">
 
               <button  mat-mini-fab color="primary" (click)="sumar(i,element.tipo)">
                 <mat-icon>add</mat-icon>
@@ -175,9 +156,6 @@
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No hay datos encontrados: "{{buscar}}"</td>
-          </tr>
         </table>
       </mat-tab>
     </mat-tab-group>
