--- a/src/app/control-ventas/tablegastos/tablegastos.component.html
+++ b/src/app/control-ventas/tablegastos/tablegastos.component.html
@@ -39,7 +39,10 @@
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-date-range-picker #picker></mat-date-range-picker>
           </mat-form-field>
-
+          <mat-form-field  style="width: 95%;" >
+            <mat-label>filtro por descripci&oacute;n</mat-label>
+            <input matInput (keyup)="applyFilter($event)" #input>
+          </mat-form-field>    
           <button mat-raised-button style="width: 100%;" (click)="ListarGastos2()"
           [disabled]="!tipoForm.valid">
             Listar
@@ -47,11 +50,6 @@
 
         </form>
       </mat-expansion-panel>
-
-      <mat-form-field  style="width: 95%; margin-left: 2%; padding-top: 3%;" >
-        <mat-label>filtro por descripci&oacute;n</mat-label>
-        <input matInput (keyup)="applyFilter($event)" #input>
-      </mat-form-field>
 
 <table *ngIf="complete; else progress" mat-table [dataSource]="DataGastos">
 
