--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
     <mat-card-header style="text-align: center;">
        <h2>Iniciar Sesi&oacute;n</h2> 
     </mat-card-header>
-    <mat-card-content [formGroup]="UserForm" >
+    <form [formGroup]="UserForm" >
         <mat-form-field appearance="fill" style="width: 100%;" >
             <mat-label>Usuario</mat-label>
             <input matInput type="text" formControlName="usuario">
@@ -18,8 +18,8 @@
           <mat-error *ngIf="Validar" style="margin-bottom:5%;">
             contrase&ntilde;a o usuario incorrecto
           </mat-error>
-    </mat-card-content>
-    <mat-card-actions >
+        </form>
+    <mat-card-actions>
         <button (click)="LogIn()" [disabled]="!UserForm.valid" mat-raised-button color="warn" style="width: 100%; text-align: center; margin: 0% 0% 3% 0;" >
           <mat-icon>login</mat-icon>
           Login</button>
