--- a/src/app/last-sold/last-sold.component.html
+++ b/src/app/last-sold/last-sold.component.html
@@ -30,7 +30,7 @@
           <ng-container matColumnDef="Fecha">
             <th mat-header-cell *matHeaderCellDef> Fecha  </th>
             <td mat-cell *matCellDef="let element; index as i"> 
-             {{element.fechaactual | date:'dd/MM/yyyy' }}
+             {{element.fechaactual | date:'EEE, dd/MM/yyyy' }}
             </td>
           </ng-container>
           <ng-container matColumnDef="Hora">
