--- a/src/app/control-ventas/control-ventas.component.html
+++ b/src/app/control-ventas/control-ventas.component.html
@@ -44,6 +44,11 @@
              style="width: 10%; margin-left: 2%; margin-right: 2%;" (click)="ExportarExcel()" [disabled]="!UserForm.valid">
               <mat-icon>import_export</mat-icon>
             </button>
+            <div style="width: 100%; padding-bottom: 3%;" *ngIf="vista">
+              <mat-checkbox style="margin-left: 2%;" *ngFor="let dia of semana; index as i" (change)="diaSeleccion($event,i)" [value]="dia">
+                {{dia}}
+              </mat-checkbox>
+            </div>
             <button mat-raised-button style="width: 80%;" (click)="ListarVentas()"
             [disabled]="!UserForm.valid">
               Listar
