--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -6,7 +6,7 @@
             Crear Usuario
           </ng-template>
           <mat-card style="width: 80%; margin: auto; margin-top: 2%;">
-            <mat-card-content [formGroup]="UsuarioForm">
+            <form [formGroup]="UsuarioForm">
                 <mat-form-field appearance="standard" style="width: 100%;" >
                     <mat-label>Nombre</mat-label>
                     <input matInput type="text" formControlName="nombre">
@@ -33,7 +33,7 @@
                       <mat-option value="user">Usuario</mat-option>
                     </mat-select>
                   </mat-form-field>
-              </mat-card-content>
+                </form>
               <mat-card-actions>
                 <button mat-button (click)="CrearUser()" [disabled]="!UsuarioForm.valid" mat-raised-button color="warn" style="width: 100%; text-align: center;" >
                     Crear</button>
