--- a/src/app/system-main/system-main.component.css
+++ b/src/app/system-main/system-main.component.css
@@ -7,3 +7,9 @@
 tr{
  height: 0px !important;   
 }
+.spinner{
+    margin: auto; margin-top: 160px;
+}
+.imgspiner{
+ height: auto; display: block; margin: auto; margin-top: 5%;
+}
