--- a/src/app/last-sold/last-sold.component.html
+++ b/src/app/last-sold/last-sold.component.html
@@ -28,7 +28,7 @@
           <ng-container matColumnDef="Fecha">
             <th mat-header-cell *matHeaderCellDef> Fecha  </th>
             <td mat-cell *matCellDef="let element; index as i"> 
-             {{element.fechaactual | date:'EEE dd-MMMM-yyyy' }}
+             {{element.datenow | date:'EEE dd-MMMM-yyyy' }}
             </td>
           </ng-container>
           <ng-container matColumnDef="Hora">
