--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,6 +2,12 @@
 .centar{
   margin-top: 100px;  
 }
+.spinner{
+  margin: auto; margin-top: 160px;
+}
+.imgspiner{
+height: auto; display: block; margin: auto; margin-top: 5%;
+}
 
   @media only screen and (min-width: 500px) {
     .centar{
