--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,5 +27,6 @@
 </mat-card>
 </div>
 <ng-template #progress >
-  <mat-spinner color="warn" style="margin: auto; margin-top: 200px;"></mat-spinner>
+  <mat-spinner color="warn" class="spinner" ></mat-spinner>
+  <img src="../../assets/imagenes/pollo.webp" class="imgspiner" width="150" alt="Logotipo Da&ntilde;ado">
 </ng-template>
