--- a/src/app/Dialogo/exportar/exportar.component.html
+++ b/src/app/Dialogo/exportar/exportar.component.html
@@ -9,8 +9,12 @@
             <input matInput type="text" [(ngModel)]="Filename">
           </mat-form-field>
       </mat-card-content>
+        <mat-checkbox (change)="CambioFecha($event)">
+          Campos con fecha y hora
+        </mat-checkbox>
       <mat-card-actions>
-        <button mat-button color="Warn" mat-dialog-close mat-dialog-close="true" (click)="Exportar()"> <mat-icon>cloud_download</mat-icon>
+        <button mat-button color="Warn" mat-dialog-close mat-dialog-close="true" 
+        (click)="Exportar()" [disabled]="estado"> <mat-icon>cloud_download</mat-icon>
              Exportar</button>
       </mat-card-actions>
 </mat-card>
