--- a/src/app/system-car/system-car.component.html
+++ b/src/app/system-car/system-car.component.html
@@ -1,7 +1,7 @@
 <mat-card style="margin-top: 70px; ">
     <mat-card-title>Carrito N° {{numeroFactura}} </mat-card-title>
     <mat-card-subtitle class="letra">Subtotal: ({{total}} productos) $ {{valor}} 
-      <button mat-stroked-button color="warn" (click)=wentLastControl() class="derecha">
+      <button mat-stroked-button color="warn" [routerLink]="['/lastsold']" class="derecha">
         <mat-icon>history</mat-icon>
         eliminar factura</button>
     </mat-card-subtitle>
