--- a/src/app/principal-module/Componentes/PrincipalNav/app.component.html
+++ b/src/app/principal-module/Componentes/PrincipalNav/app.component.html
@@ -1,8 +1,8 @@
 <mat-sidenav-container class="sidenav-container" >
     <mat-sidenav #drawer class="sidenav" fixedInViewport
-        [opened]="!open"
-        [attr.role]="open ? 'dialog' : 'navigation'"
-        [mode]="open ? 'over' : 'side'"
+        [opened]="!__Data.ObtenerOpen()"
+        [attr.role]="__Data.ObtenerOpen() ? 'dialog' : 'navigation'"
+        [mode]="__Data.ObtenerOpen() ? 'over' : 'side'"
        >
   
         <img src="../../assets/imagenes/pollo.webp" class="imagen" alt="Logotipo Da&ntilde;ado" width="150">
@@ -23,38 +23,38 @@
               </mat-expansion-panel-header>
                 <span style="margin-top: 5%;">Pollo: {{__Data.pollo}} </span>
                 <span style="margin-left: 5%;">Presa: {{__Data.presa}} </span>
-                  <button [routerLink]="['/updatep']" mat-button color="warn" (click)="drawer.toggle()" style="width: 100%;">Next</button>
+                  <button [routerLink]="['/updatep']" mat-button color="warn" (click)="__Data.ObtenerOpen()?drawer.toggle():''" style="width: 100%;">Next</button>
             </mat-expansion-panel>
         <mat-divider></mat-divider>
-        <a mat-list-item [routerLink]="['ventas/inicio']" (click)="drawer.toggle()" routerLinkActive="active">
+        <a mat-list-item [routerLink]="['ventas/inicio']" (click)="__Data.ObtenerOpen()?drawer.toggle():''" routerLinkActive="active">
           <mat-icon>
             home
           </mat-icon> 
           Inicio
         </a>
-        <a mat-list-item routerLinkActive="active" *ngIf="__Data.ObtenerItem()" [routerLink]="['inventarios/crear']" (click)="drawer.toggle()">
+        <a mat-list-item routerLinkActive="active" *ngIf="__Data.ObtenerItem()" [routerLink]="['inventarios/crear']" (click)="__Data.ObtenerOpen()?drawer.toggle():''">
           <mat-icon>
             list_alt
           </mat-icon>
           Inventario
         </a>
-        <a mat-list-item routerLinkActive="active" [routerLink]="['/gastos']" (click)="drawer.toggle()">
+        <a mat-list-item routerLinkActive="active" [routerLink]="['/gastos']" (click)="__Data.ObtenerOpen()?drawer.toggle():''">
           <mat-icon>
             pending_actions
           </mat-icon>
           Gastos
         </a>
-        <a mat-list-item routerLinkActive="active" *ngIf="__Data.ObtenerItem()" [routerLink]="['/ControlSold']" (click)="drawer.toggle()">
+        <a mat-list-item routerLinkActive="active" *ngIf="__Data.ObtenerItem()" [routerLink]="['/ControlSold']" (click)="__Data.ObtenerOpen()?drawer.toggle():''">
           <mat-icon>
             fact_check
           </mat-icon>
           Control de Ventas y Gastos</a>
-          <a mat-list-item routerLinkActive="active" *ngIf="__Data.ObtenerItem()" [routerLink]="['auth/usuarios']" (click)="drawer.toggle()">
+          <a mat-list-item routerLinkActive="active" *ngIf="__Data.ObtenerItem()" [routerLink]="['auth/usuarios']" (click)="__Data.ObtenerOpen()?drawer.toggle():''">
             <mat-icon>
               person_add
             </mat-icon>
             Usuarios</a>
-        <a mat-list-item routerLinkActive="active" (click)="logOut()"(click)="drawer.toggle()">
+        <a mat-list-item routerLinkActive="active" (click)="logOut()"(click)="__Data.ObtenerOpen()?drawer.toggle():''">
           <mat-icon>
             exit_to_app
           </mat-icon>
