--- a/src/app/principal-module/Componentes/error/error.component.css
+++ b/src/app/principal-module/Componentes/error/error.component.css
@@ -1,12 +1,9 @@
-section div:nth-child(1), section div:nth-child(3){
-    color: blue;
-    font-size: 50px;
+.container{
+    margin: auto;
+    margin-top: 70px;
+    width: 80%;
 }
-
-section div:nth-child(1){
-    margin-top: 20px;
-}
-
-section div:nth-child(2){
-    width: 50%;
+.imagen{
+    width: 100%;
+    margin: auto;
 }
