--- a/src/app/principal-module/Componentes/error/error.component.html
+++ b/src/app/principal-module/Componentes/error/error.component.html
@@ -1,11 +1,9 @@
-<section fxLayout="column wrap" fxLayoutGap="60px" fxLayoutAlign="center center">
-    <div fxFlex>
-      404 We are searching for your page...
-    </div>
-    <div fxFlex>
-      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-    </div>
-    <div fxFlex>
-      ... But we can not find it.
-    </div>
-  </section>
+<mat-card class="container" >
+  <mat-card-header>
+    <mat-card-title>Página no encontrada</mat-card-title>
+  </mat-card-header>
+  <img mat-card-image src="../../../../assets/imagenes/error404.png" class="imagen" alt="Logotipo dañado">
+  <mat-card-content>
+    <h2>Error 404</h2>
+  </mat-card-content>
+</mat-card>
