--- a/src/app/gastos-module/Componentes/CrearGasto/gastos.component.css
+++ b/src/app/gastos-module/Componentes/CrearGasto/gastos.component.css
@@ -1,13 +1,10 @@
-.container{
+.espacio{
     margin-top: 70px;
 }
-tr.mat-footer-row {
-    font-weight: bold;
-  }
   mat-card{
     width: 80%; margin: auto; margin-top: 2%;
   }
 
-.formSize{
+.tamaño{
   width: 100%;
 }
