--- a/src/app/gastos-module/Componentes/CrearGasto/gastos.component.html
+++ b/src/app/gastos-module/Componentes/CrearGasto/gastos.component.html
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="espacio">
     <mat-card>
       <mat-card-header>
         <h2>Ingresar Gastos</h2>
       </mat-card-header>
         <mat-card-content [formGroup]="GastoForm"> 
-                <mat-form-field appearance="standard" class="formSize">
+                <mat-form-field appearance="standard" class="tamaño">
                     <mat-label>Selecciona tipo: </mat-label>
                     <mat-select formControlName="tipo" >
                       <mat-option value="factura">facturas</mat-option>
@@ -12,7 +12,7 @@
                       <mat-option value="Empleado">Empleados</mat-option>
                     </mat-select>
                   </mat-form-field>
-                  <mat-form-field appearance="standard" class="formSize" >
+                  <mat-form-field appearance="standard" class="tamaño" >
                     <mat-label>Valor </mat-label>
                     <input matInput type="number" formControlName="valor">
                   </mat-form-field>
