--- a/src/app/principal-module/Componentes/PrincipalNav/app.component.css
+++ b/src/app/principal-module/Componentes/PrincipalNav/app.component.css
@@ -1,13 +1,18 @@
 .sidenav-container {
     height: 100%;
   }
+  .negrita{
+    font-weight: bold;
+  }
   .decorador{
     text-decoration: none;color: white;
   }
   .sidenav {
     width: 180px;
   }
-  
+  mat-expansion-panel-body{
+    padding: 0 !important;
+  }
   .sidenav .mat-toolbar {
     background: inherit;
   }
