--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,4 @@
 @import '~ngx-toastr/toastr.css';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
+.espacioCabecera{margin-top: 70px;}
