--- a/src/app/control-module/Componentes/control-gastos/control-gastos.component.css
+++ b/src/app/control-module/Componentes/control-gastos/control-gastos.component.css
@@ -5,28 +5,31 @@ tr.mat-footer-row {
   table{
     width: 100%; margin-top: 2%;
   }
-  tr.example-detail-row {
-    height: 0;
-  }
   
-  tr.example-element-row:not(.example-expanded-row):hover {
-    background: whitesmoke;
-  }
-  
-  tr.example-element-row:not(.example-expanded-row):active {
-    background: #efefef;
-  }
-  
-  .example-element-row td {
-    border-bottom-width: 0;
-  }
-  
-  .example-element-detail {
-    overflow: hidden;
+  .example-container {
     display: flex;
+    flex-direction: column;
+    max-height: 500px;
+    min-width: 300px;
   }
   
-  .example-element-description {
-    padding: 16px;
+  .mat-table {
+    overflow: auto;
+    max-height: 500px;
   }
   
+  .element-row {
+    position: relative;
+  }
+  
+  .element-row:not(.expanded) {
+    cursor: pointer;
+  }
+  
+  .element-row:not(.expanded):hover {
+    background: #f5f5f5;
+  }
+  
+  .element-row.expanded {
+    border-bottom-color: transparent;
+  }
