--- a/src/app/usuario-module/Componentes/login/login.component.html
+++ b/src/app/usuario-module/Componentes/login/login.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="completar; else progress">
+<div *ngIf="verProgress; else progress">
   <mat-card class="centar">
     <mat-card-header style="text-align: center;">
        <h2>Iniciar Sesi&oacute;n</h2> 
