--- a/src/app/ventas-module/Componentes/eliminar-ventas/eliminar-ventas.component.html
+++ b/src/app/ventas-module/Componentes/eliminar-ventas/eliminar-ventas.component.html
@@ -16,7 +16,7 @@
 
       <ng-container matColumnDef="Nombre">
         <th mat-header-cell *matHeaderCellDef> Nombre </th>
-        <td mat-cell *matCellDef="let element "> {{element.productoId.nombre}} </td>
+        <td mat-cell *matCellDef="let element "> {{element.producto.nombre}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Cantidad">
