--- a/src/app/ventas-module/Componentes/facturar-ventas/facturar-ventas.component.html
+++ b/src/app/ventas-module/Componentes/facturar-ventas/facturar-ventas.component.html
@@ -5,7 +5,7 @@
         <mat-icon>history</mat-icon>
         eliminar factura</a>
     </mat-card-subtitle>
-      <table mat-table [dataSource]="lista" style="width: 100%;">
+      <table mat-table [dataSource]="listaProducto" style="width: 100%;">
 
         <ng-container matColumnDef="eliminar"  >
           <th mat-header-cell *matHeaderCellDef> </th>
