--- a/src/app/inventarios-module/Componentes/editar-inventario/editar-inventario.component.html
+++ b/src/app/inventarios-module/Componentes/editar-inventario/editar-inventario.component.html
@@ -2,12 +2,12 @@
 
     <ng-container matColumnDef="Nombre">
       <th mat-header-cell *matHeaderCellDef> Nombre </th>
-      <td mat-cell *matCellDef="let element "> {{element.productoId.nombre}} </td>
+      <td mat-cell *matCellDef="let element "> {{element.producto.nombre}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Cantidad">
       <th mat-header-cell *matHeaderCellDef> cantidad </th>
-      <td mat-cell *matCellDef="let element "> {{element.cantidadExist}} </td>
+      <td mat-cell *matCellDef="let element "> {{element.cantidadExiste}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Editar">
