cambios para el nueva imagen del login

--- a/src/app/control-module/Componentes/control-ventas/controlventas.component.html
+++ b/src/app/control-module/Componentes/control-ventas/controlventas.component.html
@@ -27,7 +27,7 @@
               <mat-label>Seleccione usuario: </mat-label>
               <mat-select formControlName="usuario" >
                 <mat-option value="todos" >todos</mat-option>
-                <mat-option *ngFor="let usua of user"
+                <mat-option *ngFor="let usua of ListaUser | async"
                  [value]="usua.nombreUsuario">
                  {{usua.nombre}}
                 </mat-option>
