--- a/src/app/usuario-module/Componentes/login/login.component.css
+++ b/src/app/usuario-module/Componentes/login/login.component.css
@@ -1,20 +1,28 @@
 .centar{
     margin-top: 100px;  
-  }
-  .spinner{
-    margin: auto; margin-top: 160px;
-  }
-  .imgspiner{
-  height: auto; display: block; margin: auto; margin-top: 5%;
-  }
-  .botonLogin{
-      width: 100%;
-  }
-    @media only screen and (min-width: 500px) {
-      .centar{
-        margin-left: 15%;
-        margin-right: 15%;
-        margin-top: 100px;
-  
-      }
-      }
+}
+.bg-pollo{
+  background-color: #C62828;
+}
+.tituloPollo{
+ font-size: x-large;
+ font-weight: 700;
+}
+.imagenPollo{
+  margin: 0;
+  width: 90px;
+  height: auto;
+}
+@media only screen and (min-width: 500px) {
+  .centar{
+    margin-left: 15%;
+    margin-right: 15%;
+    }
+    
+}
+@media only screen and (min-width: 500px) {
+    .segundo-centrar{
+      margin-left: 15%;
+      margin-right: 15%;
+    }
+}
