--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -14,8 +14,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$AsaderoFrontEndv2-dev-primary: mat-palette($mat-indigo);
-$AsaderoFrontEndv2-dev-accent: mat-palette($mat-pink, A200, A100, A400);
+$AsaderoFrontEndv2-dev-primary: mat-palette($mat-red, 800);
+$AsaderoFrontEndv2-dev-accent: mat-palette($mat-amber, 800);
 
 // The warn palette is optional (defaults to red).
 $AsaderoFrontEndv2-dev-warn: mat-palette($mat-red);
