--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~ngx-toastr/toastr.css';
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-.espacioCabecera{margin-top: 70px;}
+body,html{ height: 100%; margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+.loading{
+    position: fixed; /* Sit on top of the page content */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding-top: 250px;
+    background-color: rgba(0,0,0,0.6); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+  }
+  .imgPollo {
+  width: 150px;
+  display: block;
+  }
